--- a/ui/index.html
+++ b/ui/index.html
@@ -62,7 +62,8 @@
       ],
       "payable": false,
       "stateMutability": "view",
-      "type": "function"
+      "type": "function",
+      "signature": "0x0b791430"
     },
     {
       "constant": true,
@@ -85,7 +86,8 @@
       ],
       "payable": false,
       "stateMutability": "view",
-      "type": "function"
+      "type": "function",
+      "signature": "0x30f9f0f6"
     },
     {
       "constant": true,
@@ -108,13 +110,15 @@
       ],
       "payable": false,
       "stateMutability": "view",
-      "type": "function"
+      "type": "function",
+      "signature": "0x81fb1fb4"
     },
     {
       "inputs": [],
       "payable": true,
       "stateMutability": "payable",
-      "type": "constructor"
+      "type": "constructor",
+      "signature": "constructor"
     },
     {
       "anonymous": false,
@@ -126,7 +130,8 @@
         }
       ],
       "name": "eventCreated",
-      "type": "event"
+      "type": "event",
+      "signature": "0xbf1f7f2fd981efa182d20ecc41c1917a39e9e6b1d28bd488492485babaa19f5d"
     },
     {
       "anonymous": false,
@@ -138,7 +143,8 @@
         }
       ],
       "name": "userRegistered",
-      "type": "event"
+      "type": "event",
+      "signature": "0x6b7a42e3768fc24ff05fc49e251816434f842a132416160282a290142dbdefd2"
     },
     {
       "anonymous": false,
@@ -150,7 +156,8 @@
         }
       ],
       "name": "eventClosed",
-      "type": "event"
+      "type": "event",
+      "signature": "0x86d7ce8cea57acc6b1c4bf7a21bf2a3912df0a60072ec4f1323c270720b6f1a9"
     },
     {
       "anonymous": false,
@@ -162,7 +169,8 @@
         }
       ],
       "name": "eventOpened",
-      "type": "event"
+      "type": "event",
+      "signature": "0x318e93ba955096dd838dcf8723ce57ec0ae95678240691808e0ab0e6b0c3d224"
     },
     {
       "anonymous": false,
@@ -174,7 +182,8 @@
         }
       ],
       "name": "eventExtented",
-      "type": "event"
+      "type": "event",
+      "signature": "0x6e127b5d62ef331187f8588a706d912496c5b2ba8d9b05502f5ddc2c34cbcb6a"
     },
     {
       "constant": false,
@@ -205,7 +214,8 @@
       ],
       "payable": true,
       "stateMutability": "payable",
-      "type": "function"
+      "type": "function",
+      "signature": "0x0374ab0b"
     },
     {
       "constant": false,
@@ -224,7 +234,8 @@
       ],
       "payable": true,
       "stateMutability": "payable",
-      "type": "function"
+      "type": "function",
+      "signature": "0x406db843"
     },
     {
       "constant": false,
@@ -238,7 +249,8 @@
       "outputs": [],
       "payable": false,
       "stateMutability": "nonpayable",
-      "type": "function"
+      "type": "function",
+      "signature": "0x2ee07c00"
     },
     {
       "constant": false,
@@ -252,7 +264,8 @@
       "outputs": [],
       "payable": false,
       "stateMutability": "nonpayable",
-      "type": "function"
+      "type": "function",
+      "signature": "0x8e07c6bf"
     },
     {
       "constant": false,
@@ -270,7 +283,8 @@
       "outputs": [],
       "payable": false,
       "stateMutability": "nonpayable",
-      "type": "function"
+      "type": "function",
+      "signature": "0x6746ac4f"
     },
     {
       "constant": true,
@@ -289,7 +303,8 @@
       ],
       "payable": false,
       "stateMutability": "view",
-      "type": "function"
+      "type": "function",
+      "signature": "0x20020581"
     },
     {
       "constant": true,
@@ -308,7 +323,8 @@
       ],
       "payable": false,
       "stateMutability": "view",
-      "type": "function"
+      "type": "function",
+      "signature": "0x86ae5fec"
     },
     {
       "constant": true,
@@ -327,7 +343,8 @@
       ],
       "payable": false,
       "stateMutability": "view",
-      "type": "function"
+      "type": "function",
+      "signature": "0xdf1383a2"
     },
     {
       "constant": false,
@@ -336,7 +353,8 @@
       "outputs": [],
       "payable": false,
       "stateMutability": "nonpayable",
-      "type": "function"
+      "type": "function",
+      "signature": "0x476343ee"
     },
     {
       "constant": false,
@@ -350,7 +368,8 @@
       "outputs": [],
       "payable": false,
       "stateMutability": "nonpayable",
-      "type": "function"
+      "type": "function",
+      "signature": "0xb7d86225"
     },
     {
       "constant": true,
@@ -364,7 +383,8 @@
       ],
       "payable": false,
       "stateMutability": "view",
-      "type": "function"
+      "type": "function",
+      "signature": "0xdb07b68e"
     },
     {
       "constant": true,
@@ -378,7 +398,8 @@
       ],
       "payable": false,
       "stateMutability": "view",
-      "type": "function"
+      "type": "function",
+      "signature": "0xd9e48f5c"
     },
     {
       "constant": true,
@@ -413,7 +434,18 @@
       ],
       "payable": false,
       "stateMutability": "view",
-      "type": "function"
+      "type": "function",
+      "signature": "0xec38d5a0"
+    },
+    {
+      "constant": false,
+      "inputs": [],
+      "name": "circuitBreaker",
+      "outputs": [],
+      "payable": false,
+      "stateMutability": "nonpayable",
+      "type": "function",
+      "signature": "0x16efd941"
     },
     {
       "constant": false,
@@ -422,14 +454,15 @@
       "outputs": [],
       "payable": false,
       "stateMutability": "nonpayable",
-      "type": "function"
+      "type": "function",
+      "signature": "0x41c0e1b5"
     }
   ];
 
         var myContract = web3.eth.contract(ABI);
 
 		// UPDATE CONTRACT ADDRESS HERE, Rinkeby: 0x2Bf08fD6d5E5efB829346377639C091300382DFd
-        var contractInstance = myContract.at('0x0F3140233035a6920420fb763BB953966714aa19');
+        var contractInstance = myContract.at('0x208237c8eed326787bda196b5db622491489a89c');
 
 		var version = web3.version.api;
 		console.log(version); // "0.2.3"
@@ -481,7 +514,19 @@
             }
         	});
 
-		});
+    });
+    
+    $("#button-pause").click(function(){
+
+      contractInstance.circuitBreaker(function(error, response) {
+      if (error) {
+        $.notify(error, "error");
+      } else {
+        $.notify("Transaction: " + response, "success");
+      }
+      });
+
+    });
 
 		$("#button-withdraw").click(function(){
 
@@ -491,7 +536,7 @@
             } else {
 				$.notify("Transaction: " + response, "success");
             }
-        	});
+      });
 
 		});
 
@@ -677,6 +722,7 @@
 			<div id="Owner" class="collapse">
 			 <p><br>
 
+         <button id="button-pause">Circuit breaker</button>
 				 <button id="button-withdraw">Withdraw fees</button>
 				 <button id="button-kill">Kill Contract</button>
 
